Centered titles, fixed letter spacing

--- a/style.css
+++ b/style.css
@@ -43,16 +43,18 @@ body {
 
 #bunni {
   font-weight: bold;
-  margin-top: clamp(3px, 3vw, 20px);
+  margin-top: clamp(3px, 3vw, 5px);
   font-size: clamp(20px, 5.5vw, 70px);
   letter-spacing: 0.3vw;
-  line-height: clamp(2px, 2vw);
+  margin-left: clamp(2.5px, 0.3vw, 15px);
+  margin-right: clamp(-2.5px, -0.3vw, -15px);
+  line-height: clamp(3px, 2vw);
 }
 
 #store {
+  font-size: clamp(15px, calc(5.5vw - 30px), 30px);
   letter-spacing: 2vw;
-  font-size: clamp(15px, calc(5.5vw - 30px), 70px);
-  margin-left: 1vw;
-  margin-right: -1vw;
-  line-height: clamp(5px, 5.5vw, 7px);
+  margin-left: clamp(2.5px, 2vw, 30px);
+  margin-right: clamp(-2.5px, -1vw, -30px);
+  line-height: clamp(3px, 5.5vw, 6px);
 }
